Scene menu responsive design

--- a/node-simplification.html
+++ b/node-simplification.html
@@ -12,18 +12,14 @@
 
 <body>
 	<div id="scene">
-		<div id="skele">
-			<h2>Skeleton Renders</h2>
-			<a id="nodeSimp" style="background-color: #38352e">Node Simplification</a>
-			<a id="spliDiv" href="spline-divisions.html">Spline Divisions</a>
-			<a id="skeAnim" href="skeleton-animation.html">Skeleton Animation</a>
-		</div>
-		<div id="render">
-			<h2>Scene Renders</h2>
-			<a id="roughR" href="rough-render.html">Rough Render</a>
-			<a id="splineR" href="./">Spline Render</a>
+		<h2>Skeleton Renders</h2>
+		<a id="nodeSimp" style="background-color: #38352e">Node Simplification</a>
+		<a id="spliDiv" href="spline-divisions.html">Spline Divisions</a>
+		<a id="skeAnim" href="skeleton-animation.html">Skeleton Animation</a>
+		<h2 id="sceneTitle">Scene Renders</h2>
+		<a id="roughR" href="rough-render.html">Rough Render</a>
+		<a id="splineR" href="./">Spline Render</a>
 <!--			<a id="animR" href="spline-animation.html">Animation Render</a>-->
-		</div>
 	</div>
 	<div id="menuicons">
 		<div class="menuicon">
