--- a/spline-divisions.html
+++ b/spline-divisions.html
@@ -12,18 +12,14 @@
 
 <body>
 	<div id="scene">
-		<div id="skele">
-			<h2>Skeleton Renders</h2>
-			<a id="nodeSimp" href="node-simplification.html">Node Simplification</a>
-			<a id="spliDiv" style="background-color: #38352e">Spline Divisions</a>
-			<a id="skeAnim" href="skeleton-animation.html">Skeleton Animation</a>
-		</div>
-		<div id="render">
-			<h2>Scene Renders</h2>
-			<a id="roughR" href="rough-render.html">Rough Render</a>
-			<a id="splineR" href="./">Spline Render</a>
-			<!--			<a id="animR" href="spline-animation.html">Animation Render</a>-->
-		</div>
+		<h2>Skeleton Renders</h2>
+		<a id="nodeSimp" href="node-simplification.html">Node Simplification</a>
+		<a id="spliDiv" style="background-color: #38352e">Spline Divisions</a>
+		<a id="skeAnim" href="skeleton-animation.html">Skeleton Animation</a>
+		<h2 id="sceneTitle">Scene Renders</h2>
+		<a id="roughR" href="rough-render.html">Rough Render</a>
+		<a id="splineR" href="./">Spline Render</a>
+		<!--			<a id="animR" href="spline-animation.html">Animation Render</a>-->
 	</div>
 	<div id="menuicons">
 		<div class="menuicon">
